# Giva

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.default.toml  pyproject.toml  secrets.example.toml
.github/workflows/: jekyll-gh-pages.yml
GivaApp/GivaApp/: GivaApp.swift
GivaApp/GivaApp.xcodeproj/: project.pbxproj
GivaApp/GivaAppTests/: APIModelsTests.swift  AgentActionHandlerTests.swift  GivaViewModelTests.swift  GoalsViewModelTests.swift  ServerManagerTests.swift  ServerPhaseTests.swift
GivaApp/Tools/: GivaSSETest.swift
_posts/: 2026-02-28-hello-world.md
art/: Giva Menu.pxd
blog/: _config.yml  index.md
blog/_posts/: 2026-02-28-updates.md
docs/: agent-architecture.md  apple-models-onboarding.md  bootstrap-design.md
extensions/chrome-vlm-bridge/: background.js  content.js  manifest.json
scripts/: giva-setup.py  sync_and_prioritize.py
src/giva/: __init__.py  __main__.py  benchmarks.py  bootstrap.py  cli.py  config.py  hardware.py  models.py  server.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_hardware.py  test_models.py  test_server.py  test_server_extended.py  test_server_vlm.py
tests/test_agents/: test_base.py  test_email_drafter.py  test_mcp_agent.py  test_mcp_config.py  test_mcp_lifecycle.py  test_orchestrator.py  test_orchestrator_executor.py  test_orchestrator_planner.py  test_queue.py  test_registry.py  test_router.py  test_web_orchestrator.py
tests/test_audio/: test_stt.py  test_tts.py
tests/test_db/: test_config.py  test_config_extended.py  test_goals.py  test_migrations.py  test_models.py  test_store.py  test_vlm_tasks.py
tests/test_intelligence/: test_agents.py  test_agents_extended.py  test_context.py  test_goals_extended.py  test_mcp_observations.py  test_onboarding.py  test_proactive.py  test_profile.py  test_queries.py  test_task_review.py  test_tasks.py
tests/test_llm/: test_apple_adapter.py  test_prompts.py  test_structured.py
tests/test_sync/: test_calendar.py  test_filter.py  test_mail_extended.py  test_mail_sync.py  test_scheduler.py
tests/test_utils/: test_applescript.py  (+2 more)
(+83 files in other folders)
