[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "giva"
version = "0.1.0"
description = "Generative Intelligent Virtual Assistant"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.25.2",
    "pyobjc-framework-EventKit>=12.0",
    "emlx>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx>=0.27.0",
]

[project.scripts]
giva = "giva.cli:main"
giva-server = "giva.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
