[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "giva"
version = "0.1.0"
description = "Generative Intelligent Virtual Assistant"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "mlx-lm>=0.25.2",
    "pyobjc-framework-EventKit>=12.0",
    "emlx>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
voice = [
    "mlx-audio>=0.1.0",
    "lightning-whisper-mlx>=0.0.9",
    "tiktoken>=0.8.0",  # Override lightning-whisper-mlx's pin (0.3.3 segfaults on Python 3.14)
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
]
mcp = [
    "mcp>=1.0,<2",
    "mcp-server-fetch>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx>=0.27.0",
]

[project.scripts]
giva = "giva.cli:main"
giva-server = "giva.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
